--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+---
+layout: default
+title: Strefano Oldeman's github
+tagline: Success is trying allot and being stubborn
+---
 
-    <title>Stefano Oldeman's</title>
+    <div id="index-page" class="main-content">
+        <h3 style="display:hidden">Articles</h2>
+        <ol id="articles">
+            <li>
+            <h4>Just the way it is</h4>
+            <span class="date">date</span>
+            <p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et arcu mauris, vel dictum lorem. Sed iaculis lobortis leo, et posuere dui dictum et. Pellentesque eget tellus ut mi pulvinar condimentum. Nulla mollis purus quis nisi laoreet non porttitor nulla congue. Etiam a metus mauris, vitae venenatis lorem. Etiam tempor semper lectus, sit amet accumsan dolor vehicula in. Vivamus et ligula in velit iaculis convallis vel non lectus. Phasellus commodo turpis non tellus consectetur ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+            </p></li>
+            <li>
+            <h4>Why cofee is good and should be used wisely</h4>
+            <span class="date">date</span><p>
+Suspendisse euismod tincidunt rutrum. Pellentesque in molestie dolor. Cras nibh mi, hendrerit in dapibus ut, interdum dictum tellus. Fusce ac arcu ut augue aliquet ullamcorper a sit amet est. Nunc tincidunt tellus non leo aliquam tempus. Aliquam varius massa id elit semper bibendum. Donec tempor, quam quis semper volutpat, leo nunc vestibulum neque, dictum dignissim metus mauris nec lectus. Duis ullamcorper, mi eu aliquam porttitor, dui enim luctus nibh, sed aliquam sem leo condimentum massa. Duis cursus interdum turpis quis interdum. In volutpat semper pulvinar.
+            </p></li>
 
-</head>
-<body>
-    <p>Hello You :)</p>
-</body>
-</html>
+            <li>
+            <h4>Why cofee is good and should be used wisely</h4>
+            <span class="date">date</span><p>
+Aenean dolor lacus, fermentum et rhoncus sed, rhoncus ut est. Integer rutrum enim ut dui tempor vitae fermentum arcu aliquam. Nulla ornare commodo massa, vel tempor dolor iaculis eget. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer malesuada nisl a ipsum fermentum porttitor. Nam tincidunt, magna at aliquet accumsan, est felis viverra tortor, vel accumsan mi mi vitae enim. Curabitur ultricies viverra libero, eu ultrices felis dictum non. Morbi in bibendum nisi. Ut aliquam, diam sed mattis cursus, ante felis pretium metus, vel luctus orci leo ut urna. Ut condimentum elementum diam, et sollicitudin orci vehicula id. Sed sollicitudin enim eget metus congue pulvinar.
+            </p></li>
+        </ol>
+    </div>
