--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Strefano Oldeman's pages
 tagline: essays and brain dumps
 ---
 
@@ -9,9 +8,8 @@ tagline: essays and brain dumps
         <ol id="articles">
         {% for post in site.posts %}
             <li>
-                <h4>{{ post.title }}</h4>
-                <span class="date"> {{ post.data}} </span>
-                <a href="{{ post.url }}">{{ post.title }}</a>
+                <a href="{{ post.url }}"><h4>{{ post.title }}</h4></a>
+                <span class="date"> {{ post.date}} </span>
                 <p>{{ post.summary }}</p>
             </li>
         {% else %}
