--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
-title: Stefano Oldeman's posts
 layout : default
+title: about myself
 ---
         <address>
             <p>Here a list of sites where you can find me</p>
