--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 layout: default
-tagline: essays and brain dumps
+type: index
 ---
 
     <div id="index-page" class="main-content">
-        <h3 style="display:hidden">Articles</h2>
         <ol id="articles">
         {% for post in site.posts %}
             <li>
-                <a href="{{ post.url }}"><h4>{{ post.title }}</h4></a>
+                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
                 <span class="date"> {{ post.date}} </span>
                 <p>{{ post.summary }}</p>
             </li>
