fix layout and use Theme by orderlist

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout : default
-title: about myself
+type: about
 ---
         <address>
             <p>Here a list of sites where you can find me</p>
